crates/alder-parse/src/item/snapshots/alder_parse__item__macro___tests__comptime_block.snap
---
source: crates/alder-parse/src/item/macro_.rs
description: "comptime {\n    let routes = Fs.readDir(\"routes\")\n    routes\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 4,
            column: 2,
        },
    },
    value: Item {
        attributes: [],
        visibility: Private,
        kind: Comptime(
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 10,
                    },
                    end: Position {
                        line: 4,
                        column: 2,
                    },
                },
                value: Block {
                    stmts: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 5,
                                },
                                end: Position {
                                    line: 2,
                                    column: 38,
                                },
                            },
                            value: Let(
                                LetDecl {
                                    pattern: Located {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 9,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 15,
                                            },
                                        },
                                        value: Var(
                                            "routes",
                                        ),
                                    },
                                    annotation: None,
                                    value: Located {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 18,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 38,
                                            },
                                        },
                                        value: Call {
                                            function: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 2,
                                                        column: 18,
                                                    },
                                                    end: Position {
                                                        line: 2,
                                                        column: 28,
                                                    },
                                                },
                                                value: Access {
                                                    record: Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 2,
                                                                column: 18,
                                                            },
                                                            end: Position {
                                                                line: 2,
                                                                column: 20,
                                                            },
                                                        },
                                                        value: Path(
                                                            Path {
                                                                segments: [
                                                                    Located {
                                                                        region: Region {
                                                                            start: Position {
                                                                                line: 2,
                                                                                column: 18,
                                                                            },
                                                                            end: Position {
                                                                                line: 2,
                                                                                column: 20,
                                                                            },
                                                                        },
                                                                        value: "Fs",
                                                                    },
                                                                ],
                                                            },
                                                        ),
                                                    },
                                                    field: Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 2,
                                                                column: 21,
                                                            },
                                                            end: Position {
                                                                line: 2,
                                                                column: 28,
                                                            },
                                                        },
                                                        value: "readDir",
                                                    },
                                                },
                                            },
                                            arguments: [
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 2,
                                                            column: 29,
                                                        },
                                                        end: Position {
                                                            line: 2,
                                                            column: 37,
                                                        },
                                                    },
                                                    value: Str(
                                                        "routes",
                                                    ),
                                                },
                                            ],
                                        },
                                    },
                                },
                            ),
                        },
                    ],
                    tail: Some(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 5,
                                },
                                end: Position {
                                    line: 3,
                                    column: 11,
                                },
                            },
                            value: Var(
                                "routes",
                            ),
                        },
                    ),
                },
            },
        ),
    },
}
