crates/alder-parse/src/item/snapshots/alder_parse__item__macro___tests__error_comptime_no_block.snap
---
source: crates/alder-parse/src/item/macro_.rs
description: comptime 42
---
Comptime(
    Open(
        1,
        10,
    ),
    1,
    1,
)
