crates/alder-parse/src/item/snapshots/alder_parse__item__macro___tests__error_endless.snap
---
source: crates/alder-parse/src/item/macro_.rs
description: "macro f(a) { quote { a }"
---
Macro(
    Body(
        Endless {
            expected: 125,
            opening: Position {
                line: 1,
                column: 12,
            },
        },
        1,
        12,
    ),
    1,
    1,
)
