crates/alder-parse/src/item/snapshots/alder_parse__item__macro___tests__error_name.snap
---
source: crates/alder-parse/src/item/macro_.rs
description: "macro Now() {}"
---
Macro(
    Name(
        1,
        7,
    ),
    1,
    1,
)
