crates/alder-parse/src/item/snapshots/alder_parse__item__macro___tests__error_no_body.snap
---
source: crates/alder-parse/src/item/macro_.rs
description: macro f(a)
---
Macro(
    Body(
        Open,
        1,
        11,
    ),
    1,
    1,
)
