crates/alder-parse/src/item/snapshots/alder_parse__item__macro___tests__error_param.snap
---
source: crates/alder-parse/src/item/macro_.rs
description: "macro f(A) {}"
---
Macro(
    Param(
        1,
        9,
    ),
    1,
    1,
)
