crates/alder-parse/src/item/snapshots/alder_parse__item__macro___tests__error_param_end.snap
---
source: crates/alder-parse/src/item/macro_.rs
description: "macro f(a b) {}"
---
Macro(
    ParamEnd(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 8,
            },
            boundary: Position {
                line: 1,
                column: 10,
            },
            unexpected: Position {
                line: 1,
                column: 11,
            },
        },
    ),
    1,
    1,
)
