crates/alder-parse/src/item/snapshots/alder_parse__item__macro___tests__error_unbalanced.snap
---
source: crates/alder-parse/src/item/macro_.rs
description: "macro f(a) { (a] }"
---
Macro(
    Body(
        Unbalanced {
            found: 93,
            expected: 41,
            opening: Position {
                line: 1,
                column: 14,
            },
        },
        1,
        16,
    ),
    1,
    1,
)
